--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<a href="clock.html" class="btn-liveclock">
+  liveclock
+</a>
   <div class="glass">
     <p class="asosiy">Rock Paper Scissors</p>
     <button id="themeToggle">🌙</button>
