--- a/clock.html
+++ b/clock.html
@@ -8,12 +8,22 @@
 </head>
 <body>
 
+  <!-- OCEAN BACKGROUND -->
+  <div class="ocean-bg"></div>
 
   <!-- SOAT -->
   <div class="soat" id="soat">
     <div class="clock" id="clock"></div>
-  
   </div>
+
+  <div class="malumot">
+    <p class="yaratuvchi">Made by Shoxrux</p>
+  </div>
+
+  <!-- SEA SOUND -->
+  <audio id="seaSound" loop>
+    <source src="sea.mp3" type="audio/mpeg">
+  </audio>
 
   <script src="clock.js"></script>
 </body>
